# django_exercise

./: .gitignore  CODE_DOC.html  Dockerfile.django  Dockerfile.vue  README.md  docker-compose.yaml  docs.sh
django/: README.md  _doc_header.kp  default.entrypoint.sh  pyproject.toml
django/core/: admin.py  models.py  urls.py  views.py
django/field_mgmt/: admin.py  apps.py  models.py  urls.py  views.py
django/field_mgmt/migrations/: 0001_initial.py  0002_alter_field_area.py
django/server/: base_settings.py  urls.py
test_data/: bad_data_1.csv  sample_data.csv  sample_data_2.csv  sample_data_3.csv  sample_data_4.csv  testImport-(2).csv
vue/: README.md  default.entrypoint.sh  index.html  package-lock.json  package.json  vite.config.js
vue/src/: A_doc_header.kp  App.vue  main.js
vue/src/assets/: main.css
vue/src/components/: A_doc_header.kp  InputField.vue  Login.vue  SelectField.vue
vue/src/router/: A_doc_header.kp  index.js
vue/src/stores/: A_doc_header.kp  auth.js
vue/src/views/: A_doc_header.kp  EditFieldRecord.vue  ImportRecords.vue  Login.vue  ManageFields.vue
